--- a/pymakr.conf
+++ b/pymakr.conf
@@ -1,8 +1,8 @@
 {
-    "address": "COM3",
+    "address": "COM6",
     "username": "micro",
     "password": "python",
     "sync_folder": "",
     "open_on_start": true,
-    "safe_boot_on_upload": false
+    "safe_boot_on_upload": true
 }
